--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,7 +25,7 @@
         <div class="card shadow-2-strong" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
-            <h3 class="mb-3">Counter Cody</h3>
+            <h3 class="mb-3">Generalized Counter</h3>
             
             <form method="post">
               {% csrf_token %}
